--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -1,24 +1,15 @@
 @import "tailwindcss";
+
 @import "tw-animate-css";
 
-@custom-variant dark (&:where(.dark, .dark *));
+@custom-variant dark (&:is(.dark *));
 
-@theme {
-    --font-sans: "Inter", "Geist", ui-sans-serif, system-ui, sans-serif,
-        "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-html,
 body {
-    @apply bg-white dark:bg-gray-950;
-
-    @media (prefers-color-scheme: dark) {
-        color-scheme: dark;
-    }
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 :root {
-    --radius: 0.625rem;
     --background: var(--color-white);
     --foreground: var(--color-zinc-900);
     --card: var(--color-white);
@@ -34,6 +25,7 @@ body {
     --accent: --alpha(var(--color-black) / 4%);
     --accent-foreground: var(--color-zinc-900);
     --destructive: var(--color-red-500);
+    --destructive-foreground: var(--color-red-700);
     --border: --alpha(var(--color-black) / 10%);
     --input: --alpha(var(--color-black) / 10%);
     --ring: var(--color-zinc-400);
@@ -42,15 +34,15 @@ body {
     --chart-3: oklch(0.398 0.07 227.392);
     --chart-4: oklch(0.828 0.189 84.429);
     --chart-5: oklch(0.769 0.188 70.08);
+    --radius: 0.625rem;
     --sidebar: oklch(0.985 0 0);
-    --sidebar-foreground: oklch(0.145 0 0);
-    --sidebar-primary: oklch(0.205 0 0);
+    --sidebar-foreground: oklch(0.141 0.005 285.823);
+    --sidebar-primary: oklch(0.21 0.006 285.885);
     --sidebar-primary-foreground: oklch(0.985 0 0);
-    --sidebar-accent: oklch(0.97 0 0);
-    --sidebar-accent-foreground: oklch(0.205 0 0);
-    --sidebar-border: oklch(0.922 0 0);
-    --sidebar-ring: oklch(0.708 0 0);
-    --destructive-foreground: var(--color-red-700);
+    --sidebar-accent: oklch(0.967 0.001 286.375);
+    --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
+    --sidebar-border: oklch(0.92 0.004 286.32);
+    --sidebar-ring: oklch(0.871 0.006 286.286);
     --info: var(--color-blue-500);
     --info-foreground: var(--color-blue-700);
     --success: var(--color-emerald-500);
@@ -75,6 +67,7 @@ body {
     --accent: --alpha(var(--color-white) / 8%);
     --accent-foreground: var(--color-zinc-100);
     --destructive: var(--color-red-500);
+    --destructive-foreground: var(--color-red-400);
     --border: --alpha(var(--color-white) / 12%);
     --input: --alpha(var(--color-white) / 12%);
     --ring: var(--color-zinc-500);
@@ -83,15 +76,14 @@ body {
     --chart-3: oklch(0.769 0.188 70.08);
     --chart-4: oklch(0.627 0.265 303.9);
     --chart-5: oklch(0.645 0.246 16.439);
-    --sidebar: oklch(0.205 0 0);
+    --sidebar: oklch(0.21 0.006 285.885);
     --sidebar-foreground: oklch(0.985 0 0);
     --sidebar-primary: oklch(0.488 0.243 264.376);
     --sidebar-primary-foreground: oklch(0.985 0 0);
-    --sidebar-accent: oklch(0.269 0 0);
+    --sidebar-accent: oklch(0.274 0.006 286.033);
     --sidebar-accent-foreground: oklch(0.985 0 0);
-    --sidebar-border: oklch(1 0 0 / 10%);
-    --sidebar-ring: oklch(0.556 0 0);
-    --destructive-foreground: var(--color-red-400);
+    --sidebar-border: oklch(0.274 0.006 286.033);
+    --sidebar-ring: oklch(0.442 0.017 285.786);
     --info: var(--color-blue-500);
     --info-foreground: var(--color-blue-400);
     --success: var(--color-emerald-500);
@@ -101,10 +93,6 @@ body {
 }
 
 @theme inline {
-    --radius-sm: calc(var(--radius) - 4px);
-    --radius-md: calc(var(--radius) - 2px);
-    --radius-lg: var(--radius);
-    --radius-xl: calc(var(--radius) + 4px);
     --color-background: var(--background);
     --color-foreground: var(--foreground);
     --color-card: var(--card);
@@ -120,6 +108,7 @@ body {
     --color-accent: var(--accent);
     --color-accent-foreground: var(--accent-foreground);
     --color-destructive: var(--destructive);
+    --color-destructive-foreground: var(--destructive-foreground);
     --color-border: var(--border);
     --color-input: var(--input);
     --color-ring: var(--ring);
@@ -128,6 +117,10 @@ body {
     --color-chart-3: var(--chart-3);
     --color-chart-4: var(--chart-4);
     --color-chart-5: var(--chart-5);
+    --radius-sm: calc(var(--radius) - 4px);
+    --radius-md: calc(var(--radius) - 2px);
+    --radius-lg: var(--radius);
+    --radius-xl: calc(var(--radius) + 4px);
     --color-sidebar: var(--sidebar);
     --color-sidebar-foreground: var(--sidebar-foreground);
     --color-sidebar-primary: var(--sidebar-primary);
@@ -137,18 +130,17 @@ body {
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-ring: var(--sidebar-ring);
     --animate-skeleton: skeleton 2s -1s infinite linear;
+    --input: var(--input);
+    --border: var(--border);
     --color-warning-foreground: var(--warning-foreground);
     --color-warning: var(--warning);
     --color-success-foreground: var(--success-foreground);
     --color-success: var(--success);
-    --secondary: var(--secondary);
-    --muted: var(--muted);
-    --input: var(--input);
     --color-info-foreground: var(--info-foreground);
     --color-info: var(--info);
-    --color-destructive-foreground: var(--destructive-foreground);
-    --border: var(--border);
     --accent: var(--accent);
+    --muted: var(--muted);
+    --secondary: var(--secondary);
 
     @keyframes skeleton {
         to {
